--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,34 @@
-# Node.js
+# Node modules
 node_modules/
-npm-debug.log
-yarn-error.log
 
 # Logs
 logs/
 *.log
-*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+
+# Production
+build/
+dist/
 
 # Dependency directories
 jspm_packages/
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # Optional npm cache directory
 .npm
@@ -19,25 +38,3 @@ jspm_packages/
 
 # Optional REPL history
 .node_repl_history
-
-# dotenv environment variables file
-.env
-
-# MacOS
-.DS_Store
-
-# Windows
-Thumbs.db
-ehthumbs.db
-
-# IDEs and editors
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Testing
-coverage/
