--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "testing-for-backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
     "build": "echo 'No build step defined'",
     "start": "node server.js"
-
   },
-  "author": "",
+  "author": "ujala",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.3.31",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "imagekit": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9",
+    "svix": "^1.44.0"
   }
 }
