--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "ujala",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.3.31",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
